--- a/packages/tools/docusaurus/package.json
+++ b/packages/tools/docusaurus/package.json
@@ -14,6 +14,7 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@bedrock-layout/primitives": "^2.2.1",
     "@code-hike/mdx": "^0.7.4",
     "@docusaurus/core": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
@@ -25,7 +26,8 @@
     "react": "^17.0.2",
     "react-admonitions": "^2.1.0",
     "react-dom": "^17.0.2",
-    "shiki": "^0.10.1"
+    "shiki": "^0.10.1",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.1.0"
