--- a/packages/tools/docusaurus/package.json
+++ b/packages/tools/docusaurus/package.json
@@ -21,11 +21,13 @@
     "@kickstartds/design-system": "^2.1.24",
     "@mdx-js/react": "2.1.3",
     "clsx": "^1.2.1",
+    "docusaurus-plugin-sass": "^0.2.2",
     "docusaurus-theme-mdx-v2": "^0.1.2",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-admonitions": "^2.1.0",
     "react-dom": "^17.0.2",
+    "sass": "^1.55.0",
     "shiki": "^0.10.1",
     "styled-components": "^5.3.6"
   },
