build: move storybook scripts to bundler package
to prepare content module split

--- a/.eslintignore
+++ b/.eslintignore
@@ -2,5 +2,4 @@ dist
 tmp
 node_modules
 packages/components/*/lib
-packages/tools/storybook/tmp
-packages/tools/storybook/tmp-tokens
+packages/*/*/storybook-tmp
