--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -31,6 +31,17 @@
         "code",
         "doc"
       ]
+    },
+    {
+      "login": "DanielLeyUX",
+      "name": "Daniel",
+      "avatar_url": "https://avatars.githubusercontent.com/u/85347223?v=4",
+      "profile": "https://www.kickstartds.com/",
+      "contributions": [
+        "doc",
+        "example",
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
