--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,7 +143,7 @@ workflows:
       - docusaurus:
           filters:
             branches:
-              only: feature/docs
+              only: master
           context: kickstartDS
           requires:
             - release
