--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "license": "(MIT OR Apache-2.0)",
   "author": "Jonas Ulrich <jonas.ulrich@kickstartds.com> (https://www.kickstartDS.com/)",
-  "homepage": "https://www.kickstartDS.com",
+  "homepage": "https://github.com/kickstartDS/kickstartDS-cli",
   "scripts": {
     "chromatic": "yarn run run-chromatic --build-script-name 'storybook:build'",
     "chromatic-base": "yarn run run-chromatic --build-script-name 'storybook-base:build'",
