--- a/packages/tools/docusaurus/package.json
+++ b/packages/tools/docusaurus/package.json
@@ -20,6 +20,7 @@
     "@bedrock-layout/primitives": "^2.2.4",
     "@code-hike/mdx": "^0.7.4",
     "@docusaurus/core": "2.2.0",
+    "@docusaurus/plugin-google-tag-manager": "^2.3.1",
     "@docusaurus/preset-classic": "2.2.0",
     "@kickstartds/design-system": "^2.1.29",
     "@mdx-js/react": "2.1.5",
