--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -51,10 +51,10 @@
   "devDependencies": {
     "@kickstartds/bundler": "^2.0.3",
     "@kickstartds/style-dictionary": "^2.0.0",
-    "storybook-design-token": "^1.4.0",
+    "storybook-design-token": "3.0.0-beta.2",
     "style-dictionary": "^3.7.1"
   },
   "peerDependencies": {
-    "react": "^17.0.2"
+    "react": "^18.2.0"
   }
 }
