chore(dependencies): update peerDependencies (React, kickstartDS)

--- a/packages/components/base/package.json
+++ b/packages/components/base/package.json
@@ -46,7 +46,7 @@
     "sass-yiq": "^1.0.0"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^17.0.2 || ^18.2.0"
   },
   "storybook": {
     "url": "https://master--60832aa30a8f94002193547c.chromatic.com"
