--- a/packages/tools/bundler/package.json
+++ b/packages/tools/bundler/package.json
@@ -56,10 +56,10 @@
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "@kickstartds/base": "^1.5.1",
-    "@kickstartds/core": "^1.5.0",
-    "@kickstartds/style-dictionary": "^1.5.0",
-    "react": "^18.2.0",
+    "@kickstartds/base": "^2.0.0",
+    "@kickstartds/core": "^2.0.0",
+    "@kickstartds/style-dictionary": "^2.0.0",
+    "react": "^17.0.2 || ^18.2.0",
     "storybook-dark-mode": "^1.1.2"
   }
 }
