--- a/packages/components/base/package.json
+++ b/packages/components/base/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.21.0",
-    "@kickstartds/core": "^2.0.3",
+    "@kickstartds/core": "2.0.4-next.2",
     "classnames": "^2.3.2",
     "focus-visible": "^5.0.2",
     "photoswipe": "^5.3.2",
@@ -40,7 +40,7 @@
     "vhtml": "^2.2.0"
   },
   "devDependencies": {
-    "@kickstartds/bundler": "^2.0.3",
+    "@kickstartds/bundler": "2.0.4-next.1",
     "@types/react": "^17.0.43",
     "bourbon": "^7.2.0",
     "sass-yiq": "^1.0.0"
