--- a/packages/components/form/package.json
+++ b/packages/components/form/package.json
@@ -32,12 +32,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.21.0",
-    "@kickstartds/base": "^2.0.3",
-    "@kickstartds/core": "^2.0.3",
+    "@kickstartds/base": "2.0.4-next.5",
+    "@kickstartds/core": "2.0.4-next.2",
     "classnames": "^2.3.2"
   },
   "devDependencies": {
-    "@kickstartds/bundler": "^2.0.3",
+    "@kickstartds/bundler": "2.0.4-next.1",
     "bourbon": "^7.2.0"
   },
   "peerDependencies": {
