--- a/packages/components/form/package.json
+++ b/packages/components/form/package.json
@@ -32,15 +32,17 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.21.0",
-    "@kickstartds/base": "2.0.4-next.5",
-    "@kickstartds/core": "2.0.4-next.2",
     "classnames": "^2.3.2"
   },
   "devDependencies": {
-    "@kickstartds/bundler": "2.0.4-next.1",
+    "@kickstartds/base": "^2.0.3",
+    "@kickstartds/bundler": "^2.0.3",
+    "@kickstartds/core": "^2.0.3",
     "bourbon": "^7.2.0"
   },
   "peerDependencies": {
+    "@kickstartds/base": "^2.0.3",
+    "@kickstartds/core": "^2.0.3",
     "react": "^17.0.2"
   },
   "storybook": {
