build(deps-dev): bump storybook-design-token from 1.4.0 to 2.9.0
Bumps [storybook-design-token](https://github.com/UX-and-I/storybook-design-token) from 1.4.0 to 2.9.0.
- [Release notes](https://github.com/UX-and-I/storybook-design-token/releases)
- [Commits](https://github.com/UX-and-I/storybook-design-token/compare/v1.4.0...v2.9.0)

--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -37,6 +37,7 @@
     "@types/react-dom": "^17.0.14",
     "@whitespace/storybook-addon-html": "git+https://github.com/lmestel/storybook-addon-html.git#v5.3.1",
     "chromatic": "^6.10.1",
+    "storybook-design-token": "^2.9.0",
     "storybook-dark-mode": "^1.1.2"
   }
 }
