--- a/packages/components/base/package.json
+++ b/packages/components/base/package.json
@@ -31,17 +31,18 @@
     "watch": "kdsBundle --watch"
   },
   "dependencies": {
-    "@babel/runtime": "^7.21.0",
+    "@babel/runtime": "^7.21.5",
     "classnames": "^2.3.2",
-    "focus-visible": "^5.0.2",
+    "focus-visible": "^5.2.0",
     "markdown-to-jsx": "^7.2.0",
-    "photoswipe": "^5.3.2",
+    "photoswipe": "^5.3.7",
     "vhtml": "^2.2.0"
   },
   "devDependencies": {
     "@kickstartds/bundler": "^2.0.3",
-    "@types/react": "^18.0.35",
-    "bourbon": "^7.2.0",
+    "@kickstartds/core": "^2.0.3",
+    "@types/react": "^18.2.6",
+    "bourbon": "^7.3.0",
     "sass-yiq": "^1.0.0"
   },
   "peerDependencies": {
