--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -22,27 +22,28 @@
   },
   "dependencies": {
     "@kickstartds/bundler": "^2.0.3",
-    "fast-glob": "^3.2.11",
+    "fast-glob": "^3.2.12",
     "react": "^18.2.0",
-    "yargs-parser": "^21.1.1"
+    "yargs-parser": "^21.1.1",
+    "storybook": "^7.0.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.4",
+    "@babel/core": "^7.21.8",
     "@kickstartds/storybook-addon-component-tokens": "^0.1.6",
-    "@storybook/addon-a11y": "^7.0.5",
-    "@storybook/addon-essentials": "^7.0.5",
-    "@storybook/addon-mdx-gfm": "^7.0.5",
-    "@storybook/builder-vite": "^7.0.5",
-    "@storybook/cli": "^7.0.5",
-    "@storybook/react": "^7.0.5",
-    "@storybook/react-vite": "^7.0.5",
-    "@types/react": "^18.0.35",
-    "@types/react-dom": "^18.0.11",
+    "@storybook/addon-a11y": "^7.0.10",
+    "@storybook/addon-essentials": "^7.0.10",
+    "@storybook/addon-mdx-gfm": "^7.0.10",
+    "@storybook/builder-vite": "^7.0.10",
+    "@storybook/cli": "^7.0.10",
+    "@storybook/react": "^7.0.10",
+    "@storybook/react-vite": "^7.0.10",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "@whitespace/storybook-addon-html": "git+https://github.com/lmestel/storybook-addon-html.git#v5.3.1",
-    "chromatic": "^6.17.1",
+    "chromatic": "^6.17.4",
     "storybook-design-token": "3.0.0-beta.2",
     "storybook-dark-mode": "^3.0.0",
     "react-dom": "^18.2.0",
-    "vite": "^4.2.1"
+    "vite": "^4.3.5"
   }
 }
