Update contributors [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -29,7 +29,8 @@
       "profile": "https://github.com/lmestel",
       "contributions": [
         "code",
-        "doc"
+        "doc",
+        "infra"
       ]
     },
     {
