--- a/packages/components/base/package.json
+++ b/packages/components/base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kickstartds/base",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "kickstartDS Base Module",
   "homepage": "https://www.kickstartDS.com",
   "bugs": {
@@ -39,15 +39,15 @@
     "vhtml": "^2.2.0"
   },
   "devDependencies": {
-    "@kickstartds/bundler": "^2.0.3",
-    "@kickstartds/core": "^2.0.3",
+    "@kickstartds/bundler": "^2.2.0",
+    "@kickstartds/core": "^2.2.0",
     "@types/react": "^18.2.6",
     "bourbon": "^7.3.0",
     "sass-yiq": "^1.0.0"
   },
   "peerDependencies": {
-    "react": "^17.0.2 || ^18.2.0",
-    "@kickstartds/core": "^2.0.3"
+    "@kickstartds/core": "^2.0.3",
+    "react": "^17.0.2 || ^18.2.0"
   },
   "storybook": {
     "url": "https://master--60832aa30a8f94002193547c.chromatic.com"
