--- a/packages/tools/style-dictionary/package.json
+++ b/packages/tools/style-dictionary/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
+    "@mapbox/hast-util-to-jsx": "^2.0.0",
     "ajv": "^8.10.0",
     "bezier-js": "^6.1.0",
-    "htmltojsx": "^0.3.0",
     "lodash": "^4.17.21",
     "node-html-parser": "^5.2.0",
     "postcss": "^8.4.21",
@@ -28,6 +28,7 @@
     "postcss-normalize-whitespace": "^6.0.0",
     "postcss-sort-media-queries": "^4.2.1",
     "style-dictionary": "^3.7.0",
+    "svg-parser": "^2.0.4",
     "svgstore": "^3.0.1",
     "tinycolor2": "^1.4.2"
   },
