--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
-    "@kickstartds/storybook-addon-component-tokens": "^0.1.6",
+    "@kickstartds/storybook-addon-component-tokens": "1.0.0-canary.18.36.0",
     "@storybook/addon-a11y": "^7.0.10",
     "@storybook/addon-essentials": "^7.0.10",
     "@storybook/addon-mdx-gfm": "^7.0.10",
