--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,6 @@
 {
   "compilerOptions": {
     "jsx": "react-jsx",
-    "allowSyntheticDefaultImports": true,
-    "paths": {
-      "@kickstartds/base/lib/headline/typing": [
-        "packages/components/base/source/headline/typing"
-      ],
-      "@kickstartds/base/lib/button/typing": [
-        "packages/components/base/source/button/typing"
-      ],
-      "@kickstartds/base/lib/collapsible-box/typing": [
-        "packages/components/base/source/collapsible-box/typing"
-      ]
-    }
+    "allowSyntheticDefaultImports": true
   }
 }
