--- a/packages/tools/bundler/package.json
+++ b/packages/tools/bundler/package.json
@@ -16,12 +16,15 @@
   "bin": {
     "kdsBundle": "index.js"
   },
+  "type": "module",
   "dependencies": {
     "@babel/core": "^7.21.8",
     "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
+    "@kickstartds/jsonschema-utils": "^2.4.13",
+    "@kickstartds/jsonschema2types": "^1.1.6",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
@@ -34,7 +37,7 @@
     "custom-property-extract": "^1.2.1",
     "debug": "^4.3.4",
     "del": "^6.1.1",
-    "fast-glob": "^3.2.12",
+    "fast-glob": "^3.3.1",
     "find-up": "^5.0.0",
     "fs-extra": "^11.1.1",
     "json-schema-merge-allof": "^0.8.1",
@@ -55,6 +58,12 @@
     "rollup-plugin-ts": "^3.2.0",
     "sass": "^1.62.1",
     "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "11.0.2",
+    "@types/lodash.merge": "^4.6.7",
+    "@types/node": "^20.7.1",
+    "json-schema-typed": "^8.0.1"
   },
   "peerDependencies": {
     "@kickstartds/base": "^2.0.3",
