--- a/packages/tools/docusaurus/package.json
+++ b/packages/tools/docusaurus/package.json
@@ -18,12 +18,12 @@
   },
   "dependencies": {
     "@bedrock-layout/primitives": "^2.2.4",
-    "@code-hike/mdx": "^0.8.2",
-    "@docusaurus/core": "2.4.0",
-    "@docusaurus/plugin-google-tag-manager": "^2.4.0",
-    "@docusaurus/preset-classic": "2.4.0",
-    "@kickstartds/design-system": "^2.4.27",
-    "@mdx-js/react": "2.3.0",
+    "@code-hike/mdx": "0.10.0-next.1",
+    "@docusaurus/core": "3.0.0-beta.0",
+    "@docusaurus/plugin-google-tag-manager": "3.0.0-beta.0",
+    "@docusaurus/preset-classic": "3.0.0-beta.0",
+    "@kickstartds/design-system": "2.5.21--canary.110.3345.0",
+    "@mdx-js/react": "^2.3.0",
     "clsx": "^1.2.1",
     "docusaurus-plugin-sass": "^0.2.3",
     "docusaurus-theme-mdx-v2": "^0.1.2",
@@ -33,10 +33,12 @@
     "react-dom": "^18.2.0",
     "sass": "^1.62.0",
     "shiki": "^0.14.1",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.0"
+    "@docusaurus/module-type-aliases": "3.0.0-beta.0",
+    "@docusaurus/tsconfig": "^3.0.0-beta.0"
   },
   "browserslist": {
     "production": [
