--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "husky-pre-commit": "yarn run schema && git add packages/*/*/source/**/*Props.ts && lint-staged",
     "lint": "run-p eslint stylelint",
     "list": "lerna la",
-    "postinstall": "run-p git-config copy-env-file",
+    "patch-package": "patch-package",
+    "postinstall": "run-p git-config copy-env-file patch-package",
     "schema": "lerna run --parallel schema",
     "staged": "git diff --name-only --cached | grep '@kickstartds' | cut -d / -f 3 | awk '!seen[$0]++'",
     "start": "run-p watch \"storybook start\"",
@@ -80,6 +81,8 @@
     "lerna": "^7.3.0",
     "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.8",
     "stylelint": "^15.6.1"
   },
