fix(bundler): change entrypoint for bundler independent of TypeScript

--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,4 @@ $RECYCLE.BIN/
 # Bundler generated JavaScript
 packages/tools/bundler/**/*.js
 !packages/tools/bundler/.eslintrc.js
+!packages/tools/bundler/bundle.js
