--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,20 @@
       "@kickstartds/base/lib/picture/typing": [
         "./packages/components/base/source/image/picture/typing"
       ],
+      "@kickstartds/base/lib/lightbox-image/typing": [
+        "./packages/components/base/source/image/lightbox-image/typing"
+      ],
       "@kickstartds/blog/lib/news-item/typing": [
         "./packages/components/blog/source/shared/typing"
+      ],
+      "@kickstartds/base/lib/media-video/typing": [
+        "./packages/components/base/source/text-media/MediaVideoProps"
+      ],
+      "@kickstartds/base/lib/media-image/typing": [
+        "./packages/components/base/source/text-media/MediaImageProps"
+      ],
+      "@kickstartds/base/lib/media-lazy-image/typing": [
+        "./packages/components/base/source/text-media/MediaLazyImageProps"
       ]
     }
   }
