--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,4 @@ $RECYCLE.BIN/
 packages/tools/bundler/**/*.js
 !packages/tools/bundler/.eslintrc.js
 !packages/tools/bundler/bundle.js
+packages/tools/storybook/**/*.js
