--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -25,7 +25,8 @@
     "@kickstartds/bundler": "^2.2.0",
     "fast-glob": "^3.2.12",
     "react": "^18.2.0",
-    "yargs-parser": "^21.1.1"
+    "yargs-parser": "^21.1.1",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
@@ -35,6 +36,7 @@
     "@storybook/addon-mdx-gfm": "^7.0.10",
     "@storybook/builder-vite": "^7.0.10",
     "@storybook/cli": "^7.0.10",
+    "@types/node": "^20.7.1",
     "@storybook/react": "^7.0.10",
     "@storybook/react-vite": "^7.0.10",
     "@types/react": "^18.2.6",
