--- a/packages/tools/bundler/package.json
+++ b/packages/tools/bundler/package.json
@@ -23,12 +23,12 @@
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
-    "@kickstartds/jsonschema-utils": "^2.4.18",
-    "@kickstartds/jsonschema2types": "^1.1.12",
+    "@kickstartds/jsonschema-utils": "^2.5.0",
+    "@kickstartds/jsonschema2types": "^1.1.13",
     "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^24.1.0",
+    "@rollup/plugin-commonjs": "^25.0.5",
     "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-replace": "^5.0.3",
     "autoprefixer": "^10.4.14",
     "builtin-modules": "^3.3.0",
     "change-case": "^4.1.2",
@@ -40,10 +40,12 @@
     "fast-glob": "^3.3.1",
     "find-up": "^5.0.0",
     "fs-extra": "^11.1.1",
+    "import-meta-resolve": "^3.0.0",
     "json-schema-merge-allof": "^0.8.1",
     "json-schema-ref-parser": "^9.0.9",
     "json-schema-to-typescript": "^13.0.1",
     "json-schema-traverse": "^1.0.0",
+    "json-schema-typed": "^8.0.1",
     "lodash": "^4.17.21",
     "postcss": "^8.4.23",
     "postcss-combine-duplicated-selectors": "^10.0.3",
@@ -62,8 +64,7 @@
   "devDependencies": {
     "@types/fs-extra": "11.0.2",
     "@types/lodash.merge": "^4.6.7",
-    "@types/node": "^20.7.1",
-    "json-schema-typed": "^8.0.1"
+    "@types/node": "^20.7.1"
   },
   "peerDependencies": {
     "@kickstartds/base": "^2.0.3",
