--- a/packages/tools/storybook/tsconfig.json
+++ b/packages/tools/storybook/tsconfig.json
@@ -3,7 +3,7 @@
     "jsx": "react-jsx",
     "allowSyntheticDefaultImports": true,
     "target": "ES2015",
-    "moduleResolution": "node",
-    "module": "ES2020"
+    "moduleResolution": "node16",
+    "module": "node16"
   }
 }
