--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -30,22 +30,23 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
-    "@kickstartds/storybook-addon-component-tokens": "^0.1.6",
-    "@storybook/addon-a11y": "^7.0.10",
-    "@storybook/addon-essentials": "^7.0.10",
-    "@storybook/addon-mdx-gfm": "^7.0.10",
-    "@storybook/builder-vite": "^7.0.10",
-    "@storybook/cli": "^7.0.10",
+    "@kickstartds/storybook-addon-component-tokens": "1.0.0-canary.18.36.0",
+    "@kickstartds/storybook-addon-jsonschema": "^2.0.1",
+    "@storybook/addon-a11y": "^7.4.6",
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-mdx-gfm": "^7.4.6",
+    "@storybook/builder-vite": "^7.4.6",
+    "@storybook/cli": "^7.4.6",
     "@types/node": "^20.7.1",
-    "@storybook/react": "^7.0.10",
-    "@storybook/react-vite": "^7.0.10",
+    "@storybook/react": "^7.4.6",
+    "@storybook/react-vite": "^7.4.6",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@whitespace/storybook-addon-html": "git+https://github.com/lmestel/storybook-addon-html.git#v5.3.1",
-    "chromatic": "^6.17.4",
+    "chromatic": "^7.2.3",
     "react-dom": "^18.2.0",
-    "storybook": "^7.0.10",
-    "storybook-dark-mode": "^3.0.0",
+    "storybook": "^7.4.6",
+    "storybook-dark-mode": "^3.0.1",
     "storybook-design-token": "3.0.0-beta.6",
     "vite": "^4.3.9"
   }
