--- a/packages/components/form/package.json
+++ b/packages/components/form/package.json
@@ -28,14 +28,14 @@
     "classnames": "^2.3.2"
   },
   "devDependencies": {
-    "@kickstartds/base": "^2.2.0",
-    "@kickstartds/bundler": "^2.2.0",
-    "@kickstartds/core": "^2.2.0",
+    "@kickstartds/base": "^3.0.0-next.0",
+    "@kickstartds/bundler": "^3.0.0-next.0",
+    "@kickstartds/core": "^3.0.0-next.0",
     "bourbon": "^7.3.0"
   },
   "peerDependencies": {
-    "@kickstartds/base": "^2.0.3",
-    "@kickstartds/core": "^2.0.3",
+    "@kickstartds/base": "^3.0.0-next.0",
+    "@kickstartds/core": "^3.0.0-next.0",
     "react": "^17.0.2 || ^18.2.0"
   },
   "storybook": {
