--- a/packages/components/base/package.json
+++ b/packages/components/base/package.json
@@ -32,14 +32,14 @@
     "vhtml": "^2.2.0"
   },
   "devDependencies": {
-    "@kickstartds/bundler": "^3.0.0-next.0",
-    "@kickstartds/core": "^3.0.0-next.0",
+    "@kickstartds/bundler": "^2.2.0",
+    "@kickstartds/core": "^2.2.0",
     "@types/react": "^18.2.6",
     "bourbon": "^7.3.0",
     "sass-yiq": "^1.0.0"
   },
   "peerDependencies": {
-    "@kickstartds/core": "^3.0.0-next.0",
+    "@kickstartds/core": "^2.2.0",
     "react": "^17.0.2 || ^18.2.0"
   },
   "storybook": {
