--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kickstartds-internal/storybook",
-  "version": "2.2.0",
+  "version": "3.0.0",
   "private": true,
   "main": "index.js",
   "license": "(MIT OR Apache-2.0)",
@@ -22,27 +22,27 @@
     "storybook:build": "node index.js build"
   },
   "dependencies": {
-    "@kickstartds/bundler": "^2.2.0",
+    "@kickstartds/bundler": "^3.0.0",
     "fast-glob": "^3.2.12",
     "react": "^18.2.0",
-    "yargs-parser": "^21.1.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
     "@kickstartds/storybook-addon-component-tokens": "^2.0.0",
+    "@kickstartds/storybook-addon-html": "^0.0.2",
     "@kickstartds/storybook-addon-jsonschema": "^3.0.0",
     "@storybook/addon-a11y": "^7.6.17",
     "@storybook/addon-essentials": "^7.6.17",
     "@storybook/addon-mdx-gfm": "^7.6.17",
     "@storybook/builder-vite": "^7.6.17",
     "@storybook/cli": "^7.6.17",
-    "@types/node": "^20.7.1",
     "@storybook/react": "^7.6.17",
     "@storybook/react-vite": "^7.6.17",
+    "@types/node": "^20.7.1",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.17",
-    "@kickstartds/storybook-addon-html": "^0.0.2",
     "chromatic": "^7.2.3",
     "react-dom": "^18.2.0",
     "storybook": "^7.6.17",
