--- a/packages/tools/docusaurus/package.json
+++ b/packages/tools/docusaurus/package.json
@@ -36,7 +36,8 @@
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.0"
+    "@docusaurus/module-type-aliases": "2.4.0",
+    "@kickstartds/content": "2.2.0-next.2"
   },
   "browserslist": {
     "production": [
