docs: upgrade storybook

--- a/packages/components/base/package.json
+++ b/packages/components/base/package.json
@@ -28,8 +28,7 @@
     "classnames": "^2.5.1",
     "focus-visible": "^5.2.0",
     "markdown-to-jsx": "^7.2.0",
-    "photoswipe": "^5.3.7",
-    "vhtml": "^2.2.0"
+    "photoswipe": "^5.3.7"
   },
   "devDependencies": {
     "@kickstartds/bundler": "^4.0.2",
