--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -29,25 +29,23 @@
     "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.8",
-    "@kickstartds/storybook-addon-component-tokens": "^2.0.0",
-    "@kickstartds/storybook-addon-html": "^0.0.2",
-    "@kickstartds/storybook-addon-jsonschema": "^3.0.0",
-    "@storybook/addon-a11y": "^7.6.17",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-mdx-gfm": "^7.6.17",
-    "@storybook/builder-vite": "^7.6.17",
-    "@storybook/cli": "^7.6.17",
-    "@storybook/react": "^7.6.17",
-    "@storybook/react-vite": "^7.6.17",
+    "@kickstartds/storybook-addon-component-tokens": "^3.0.0",
+    "@kickstartds/storybook-addon-html": "^1.0.0",
+    "@kickstartds/storybook-addon-jsonschema": "^4.0.0",
+    "@storybook/addon-a11y": "^8.0.8",
+    "@storybook/addon-essentials": "^8.0.8",
+    "@storybook/cli": "^8.0.8",
+    "@storybook/react": "^8.0.8",
+    "@storybook/react-vite": "^8.0.8",
     "@types/node": "^20.7.1",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.17",
-    "chromatic": "^7.2.3",
+    "@vitejs/plugin-react": "^4.2.1",
+    "chromatic": "^11.3.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.6.17",
-    "storybook-dark-mode": "^3.0.1",
-    "storybook-design-token": "3.0.0-beta.6",
-    "vite": "^4.5.3"
+    "storybook": "^8.0.8",
+    "storybook-dark-mode": "^4.0.1",
+    "storybook-design-token": "^3.1.0",
+    "vite": "^5.0.12"
   }
 }
