--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -44,6 +44,7 @@
     "@kickstartds/bundler": "^4.0.2",
     "@kickstartds/style-dictionary": "^4.0.2",
     "@storybook/types": "^7.0.5",
+    "@types/pubsub-js": "^1.8.6",
     "lodash": "^4.17.21",
     "style-dictionary": "^3.8.0"
   },
